finished the add new item to list

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,15 +55,14 @@ header #date h1 {
           flex-direction: column;
 }
 
-#mainContent #itemInputSec #inputField {
-  border: 1px solid #c8c8c8;
+#mainContent #itemInputSec .inputField {
   border-radius: 5px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
 
-#mainContent #itemInputSec #inputField #itemText {
+#mainContent #itemInputSec .inputField #itemText {
   width: 40em;
   height: 2.5em;
   border: none;
@@ -72,7 +71,7 @@ header #date h1 {
   color: #545454;
 }
 
-#mainContent #itemInputSec #inputField button {
+#mainContent #itemInputSec .inputField button {
   text-decoration: none;
   border: none;
   color: #fff;
@@ -81,12 +80,12 @@ header #date h1 {
   border-radius: 0 5px 5px 0;
 }
 
-#mainContent #itemInputSec #inputField button svg {
+#mainContent #itemInputSec .inputField button svg {
   width: 1.5em;
   height: 1.5em;
 }
 
-#mainContent #itemInputSec #inputField button:hover {
+#mainContent #itemInputSec .inputField button:hover {
   background-color: #4e0858;
 }
 
@@ -126,5 +125,15 @@ header #date h1 {
 #mainContent #listContent #itemList #list li button:hover {
   background-color: #af2aaf;
   color: #fff;
+}
+
+.greyBorder {
+  border: 1px solid #c8c8c8;
+}
+
+.redGlow {
+  border: 1px solid #af0d0d;
+  -webkit-box-shadow: 0 0 4px #af0d0d;
+          box-shadow: 0 0 4px #af0d0d;
 }
 /*# sourceMappingURL=styles.css.map */
