--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
   margin: 0;
 }
 
-.hide {
+.hide, #delete {
   display: none;
 }
 
@@ -98,17 +98,22 @@ header #date h1 {
 }
 
 #mainContent #listContent #itemList #list li {
-  width: 44.5em;
   border: 1px solid #c8c8c8;
   margin-bottom: .5em;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 #mainContent #listContent #itemList #list li p {
   margin: 0;
-  padding-top: .5em;
+  padding-top: .6em;
 }
 
-#mainContent #listContent #itemList #list li button {
+#mainContent #listContent #itemList #list li .completedBtn, #mainContent #listContent #itemList #list li .editBtn, #mainContent #listContent #itemList #list li .deleteBtn {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
   text-decoration: none;
   border: none;
   color: #000;
@@ -117,7 +122,7 @@ header #date h1 {
   border-left: 1px solid #c8c8c8;
 }
 
-#mainContent #listContent #itemList #list li button svg {
+#mainContent #listContent #itemList #list li .completedBtn svg, #mainContent #listContent #itemList #list li .editBtn svg, #mainContent #listContent #itemList #list li .deleteBtn svg {
   width: 1.5em;
   height: 1.5em;
 }
